# mpc-prototype

./: PRICES_API.md  README.md  main.py  pyproject.toml  pyrightconfig.json  run.sh
.cursor/rules/: use-uv-python.mdc
data/: plot v2.ipynb  plot.ipynb  stats_2025-10-14_19-12-16.csv  stats_2025-10-15_16-59-11.csv  stats_2025-10-16_12-37-18.csv
notebooks/: cost_function.ipynb  dynamic_programming.ipynb  fcr.ipynb
src/: controller_service.py  fcr_service.py  main.py  predictor.py  prices_service.py  simulator.py  smart_plug_service.py  test_controller_service.py  test_predictor.py  thermometer_service.py  weather_service.py
tests/: test_controller_service.py  test_prices_service.py  test_weather_service.py
