[project]
name = "mpc-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pip>=25.2",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "scipy-stubs>=1.16.2.3",
    "seaborn>=0.13.2",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
